Windows functionality & build corrections
Functionality
* Use always page file backed MMF on windows (due to issue https://github.com/nodejs/node/issues/6369).
* On windows pass page file name to mmap_map.
* Do not CloseHandle of mapped file until cleaning up as closing handle closes also connection to page file backed MMF.
* Throw unsupported error for mincore on windows

Windows build
* Compile flags around mincore calls
* npm prepublish script changed from 'make ls' to direct call of 'node lsc...'

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     },
 
     "scripts": {
-        "prepublish":   "make ls",
+        "prepublish":   "node node_modules/LiveScript/bin/lsc -b -c src/test.ls -o ./ && node node_modules/LiveScript/bin/lsc -b -c src/mmap-io.ls -o ./",
         "install":      "node-gyp configure && node-gyp rebuild",
         "test":         "node ./test.js"
     },
